testdata/baselines/reference/submodule/compiler/jsFileCompilationDuplicateVariableErrorReported.errors.txt
error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
a.ts(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'string', but here has type 'number'.


!!! error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
==== b.js (0 errors) ====
    var x = "hello";
    
==== a.ts (1 errors) ====
    var x = 10; // Error reported
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'string', but here has type 'number'.
!!! related TS6203 b.js:1:5: 'x' was also declared here.
    